tests/chainsaw/disallow-latest-tag/bad-pod-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-latest-tag
spec:
  containers:
  - name: container01
    image: busybox:latest
    args:
    - sleep
    - 1d
