tests/chainsaw/disallow-latest-tag/bad-pod-no-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-tag
spec:
  containers:
  - name: container01
    image: busybox
    args:
    - sleep
    - 1d
